FIXED   issue when importing items that are linked to other items which contain special characters in their names (e.g. service 'C:\ Drive')
FIXED   bug in Nagios config importer where the first item was being skipped if there was a comment above it

ADDED   icon preview to the OS details page

Release 1.3.0 (2011-12-11)

FIXED   a bug with the $SUPERADMIN_GROUPS array (array couldn't be unset). Also, superadmin groups are now listed first in the 'contact_groups' attr,
        allowing users to place the '+' sign in the beginning (useful to control inheritance of contact_groups from templates).
FIXED   a bug with 'generate_config' causing an endless loop and 100% CPU load. Root cause was a faulty implementation of the
        macro replacement function. Fixed a second bug that prevented macros from being added to service parameters.
FIXED   ordering of checkcommands with empty 'default service name'
FIXED   attribute ordering. Modifying or creating new attributes will not cause duplicate order numbers any more.
        Order numbers will now be changed / re-arranged automatically.
FIXED   a bug in displaying static links like 'generate nagios config' in the last user menu box, instead of 'Basic Items'
FIXED   security issue with 'call_ajax.php' -> new file handler implemented ('call_file.php') which prevents breaking out of nconf directory structure
FIXED   'Reset'-button did not reset all input fields, now it will reload the page to do a real reset for all changed values
FIXED   multimodiy and multidelete: amount of selected items was limited, because of apache 'LimitRequestLine Directive'.
        This is fixed with a change from GET to POST.
FIXED   some bugs with the way the Nagios importer parses uncommented lines in the Nagios configuration files; added check for prepending '+' characters
        in attributes to be imported.