@@ -7,6 +7,7 @@ FIXED   issue when importing items that are linked to other items which contain 
 FIXED   bug in Nagios config importer where the first item was being skipped if there was a comment above it
 
 ADDED   icon preview to the OS details page
+ADDED	authentication configuration option LOG_REMOTE_IP_HISTORY
 
 Release 1.3.0 (2011-12-11)
 
